--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
 * {
   box-sizing: border-box;
 }
+a{
+  text-decoration: none;
+}
+
 body {
   background-color: var(--Light-Gray);
   margin: 0;
@@ -70,11 +74,21 @@ p {
 .transform {
   transform: translateY(50%);
 }
-
+a:hover{
+  text-decoration: underline;
+}
 .attribution {
-  font-size: 11px;
+  font-size: 14px;
   text-align: center;
+  padding: 5px;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color:var(--Blue) ;
+  font-weight: bold;
+}
+
+@media(max-width:768px){
+  .transform{
+    transform: translateY(0%);
+  }
 }
